--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ main {
     border: 1px solid #ccc;
     padding: 10px;
     text-align: center;
-    flex: 1 1 200px;
+    flex: 1 1 4 b xcb00px;
+    
 }
 
 .book img {
