--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ nav ul {
 }
 
 nav li {
-    display: inline-block;
+    display: inline;
+
     margin-right: 10px;
 }
 
@@ -45,7 +46,7 @@ main {
     border: 1px solid #ccc;
     padding: 10px;
     text-align: center;
-    flex: 1 1 4 b xcb00px;
+    flex: 1 1 400px;
     
 }
 
